--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,9 @@ const { title } = Astro.props;
 			white 60%
 		);
 	}
+  * {
+    box-sizing: border-box;
+  }
 	html {
 		font-family: system-ui, sans-serif;
 		background: #13151a;
@@ -47,4 +50,27 @@ const { title } = Astro.props;
 			Courier New,
 			monospace;
 	}
+  .video-wrapper {
+    max-width: 560px;
+  }
+
+  .video-wrapper.YouTube {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+    margin-bottom: 1em;
+  }
+
+  .video-wrapper.YouTube iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  iframe {
+    max-width: 100%;
+  }
 </style>
