--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,35 @@ const videos = await getCollection('videos');
 
 <Layout title="Not a rabbit hole.">
 	<main>
+    <h1>This is not a rabbit hole.</h1>
+    <div class="tube">
 		{
 			videos.map((video) => <Card video={video} />)
 		}
+    </div>
 	</main>
 </Layout>
+<style>
+  main {
+    text-align: center;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100vw;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 100%;
+  }
+
+  h1 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 4rem;
+  }
+
+  .tube {
+    width: 95vw;
+    margin: 0 auto;
+    max-width: 560px;
+  }
+</style>
