--- a/src/pages/videos/[...slug].astro
+++ b/src/pages/videos/[...slug].astro
@@ -20,6 +20,18 @@ const { Content } = await video.render();
 
 <Layout title="Not a rabbit hole.">
   <main>
+    <a href="/">&larr;</a>
     <Content />
   </main>
 </Layout>
+<style>
+  a {
+    text-decoration: none;
+  }
+
+  a,
+  a:visited,
+  a:active {
+    color: white;
+  }
+</style>
