Center video on page

--- a/src/pages/videos/[...slug].astro
+++ b/src/pages/videos/[...slug].astro
@@ -21,7 +21,9 @@ const { Content } = await video.render();
 <Layout title="Not a rabbit hole.">
   <main>
     <a href="/">&larr;</a>
+    <div class="tube">
     <Content />
+    </div>
   </main>
 </Layout>
 <style>
