--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,4 +73,11 @@ const { title } = Astro.props;
   iframe {
     max-width: 100%;
   }
+
+  .tube {
+    width: 95vw;
+    margin: 0 auto;
+    max-width: 560px;
+  }
+
 </style>
