--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,4 +80,14 @@ const { title } = Astro.props;
     max-width: 560px;
   }
 
+  a {
+    text-decoration: none;
+  }
+
+  a,
+  a:visited,
+  a:active {
+    color: white;
+  }
+
 </style>
