--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -32,6 +32,7 @@ const { Content } = await video.render();
   .title {
     text-align: left;
     margin-bottom: 1rem;
+    font-weight: bold;
   }
 
   .page-link-block, .source-link-block {
@@ -42,8 +43,6 @@ const { Content } = await video.render();
   .page-link, .source-link {
     display: inline-block;
     border: 1px solid #ffffff;
-    padding: 0.3rem;
-    border-bottom-width: 3px;
-    border-right-width: 3px;
+    padding: 0.5rem;
   }
 </style>
