--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,11 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 		background: #13151a;
 	}
+
+  body {
+    color: white;
+  }
+
 	code {
 		font-family:
 			Menlo,
@@ -50,6 +55,7 @@ const { title } = Astro.props;
 			Courier New,
 			monospace;
 	}
+
   .video-wrapper {
     max-width: 560px;
   }
@@ -72,6 +78,17 @@ const { title } = Astro.props;
 
   iframe {
     max-width: 100%;
+  }
+
+  .main-container {
+   text-align: center;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100vw;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 100%;
   }
 
   .tube {
