--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const videos = await getCollection('videos');
 ---
 
 <Layout title="Not a rabbit hole.">
-	<main>
+	<main class="main-container">
     <h1>This is not a rabbit hole.</h1>
     <div class="tube">
 		{
@@ -18,17 +18,6 @@ const videos = await getCollection('videos');
 	</main>
 </Layout>
 <style>
-  main {
-    text-align: center;
-    color: white;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100vw;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    width: 100%;
-  }
-
   h1 {
     margin-top: 2rem;
     margin-bottom: 2rem;
