--- a/src/pages/videos/tags/[tag].astro
+++ b/src/pages/videos/tags/[tag].astro
@@ -22,7 +22,7 @@ const { tag } = Astro.params;
 const { videos } = Astro.props;
 ---
 
-<Layout>
+<Layout title={tag}>
   <main class="main-container">
 
 
