--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -20,9 +20,17 @@ const { tags } = Astro.props;
     justify-content: flex-start;
     padding: 0;
     margin: 0 -0.25rem;
+    font-size: 0.75rem;
   }
 
   .tag {
     padding: 0 0.25rem;
+  }
+
+  .tag a {
+    background-color: var(--yellow);
+    color: var(--black);
+    border-radius: 0.25rem;
+    padding: 0.25rem 0.25rem;
   }
 </style>
