--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,22 +22,16 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+    --green: #4ecdc4;
+    --yellow: #ffd93c;
+    --black: #13151a;
 	}
   * {
     box-sizing: border-box;
   }
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: var(--black);
 	}
 
   body {
