--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -28,6 +28,7 @@ const { Content } = await video.render();
 <style>
   .card {
     margin-bottom: 2rem;
+    background-color: var(--less-black);
   }
 
   .title {
