--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,47 +8,48 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 <style is:global>
-	:root {
+  :root {
     --green: #4ecdc4;
     --yellow: #ffd93c;
-    --black: #13151a;
-	}
+    --black: #1f2321;
+    --less-black: #343b37;
+  }
   * {
     box-sizing: border-box;
   }
-	html {
-		font-family: system-ui, sans-serif;
-		background: var(--black);
-	}
+  html {
+    font-family: system-ui, sans-serif;
+    background: var(--black);
+  }
 
   body {
     color: white;
   }
 
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  code {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      monospace;
+  }
 
   .video-wrapper {
     max-width: 560px;
@@ -75,7 +76,7 @@ const { title } = Astro.props;
   }
 
   .main-container {
-   text-align: center;
+    text-align: center;
     color: white;
     margin-left: auto;
     margin-right: auto;
@@ -100,5 +101,4 @@ const { title } = Astro.props;
   a:active {
     color: white;
   }
-
 </style>
