Align buttons in single row

--- a/src/components/PageLinkButton.astro
+++ b/src/components/PageLinkButton.astro
@@ -14,5 +14,7 @@ const { slug } = Astro.props;
 <style>
   .page-link-block {
     margin-bottom: 1rem;
+    order: 2;
+    padding-left: 1rem;
   }
 </style>
