--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,19 +16,29 @@ const { Content } = await video.render();
   <div class:list={[ 'video-wrapper', `${video.data.platform}` ]}>
     <Content />
   </div>
-  <div class="title">
-   { video.data.title }
+  <div class="meta">
+    <div class="title">
+     { video.data.title }
+    </div>
+    <div class="link-block">
+      <PageLinkButton slug={video.slug} />
+      <SourceLink platform={video.data.platform} link={video.data['source-link']} />
+    </div>
+    <Tags tags={video.data['video-tags']} />
   </div>
-  <div class="link-block">
-    <PageLinkButton slug={video.slug} />
-  <SourceLink platform={video.data.platform} link={video.data['source-link']} />
-  </div>
-  <Tags tags={video.data['video-tags']} />
 </div>
 <style>
   .card {
     margin-bottom: 2rem;
     background-color: var(--less-black);
+    border-bottom-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+  }
+
+  .meta {
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .title {
@@ -38,6 +48,9 @@ const { Content } = await video.render();
   }
 
   .link-block {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
     text-align: right;
   }
 </style>
