--- a/src/components/SourceLink.astro
+++ b/src/components/SourceLink.astro
@@ -11,7 +11,7 @@ const text = `Watch on ${platform}`
 ---
 
 <div class="source-link-block">
-  <Button href={link} text={text} />
+  <Button href={link} text={text} platform={platform} />
 </div>
 <style>
   .source-link-block {
