--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,8 @@ const { title } = Astro.props;
     --yellow: #ffd93c;
     --black: #1f2321;
     --less-black: #343b37;
+    --x: #000000;
+    --youtube: #ff6b6b;
   }
   * {
     box-sizing: border-box;
