--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -43,14 +43,15 @@ const { Content } = await video.render();
 
   .title {
     text-align: left;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     font-weight: bold;
   }
 
   .link-block {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-end;
+    justify-content: flex-start;
     text-align: right;
+    margin-bottom: 1.5rem;
   }
 </style>
