--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -50,7 +50,7 @@ const { Content } = await video.render();
   .link-block {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: flex-end;
     text-align: right;
     margin-bottom: 1.5rem;
   }
