--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -17,7 +17,7 @@ const { tags } = Astro.props;
     list-style: none;
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: flex-end;
     padding: 0;
     margin: 0 -0.25rem;
     font-size: 0.75rem;
