--- a/src/components/SourceLink.astro
+++ b/src/components/SourceLink.astro
@@ -7,7 +7,7 @@ interface Props {
 import Button from './Button.astro';
 
 const { platform, link } = Astro.props;
-const text = `Watch on ${platform}`
+const text = `Watch on ${platform}`;
 ---
 
 <div class="source-link-block">
