--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -5,10 +5,13 @@ interface Props {
 
 const { tags } = Astro.props;
 ---
+
 <ul class="tags">
   {
-    tags.map(tag => (
-    <li class="tag"><a href={`/videos/tags/${tag}`}>#{tag}</a></li>
+    tags.map((tag) => (
+      <li class="tag">
+        <a href={`/videos/tags/${tag}`}>#{tag}</a>
+      </li>
     ))
   }
 </ul>
