--- a/src/pages/videos/[...slug].astro
+++ b/src/pages/videos/[...slug].astro
@@ -11,7 +11,7 @@ export async function getStaticPaths() {
     return {
       params: { slug: video.slug },
       props: { video }
-    }
+    };
   });
 }
 
@@ -30,53 +30,55 @@ const attributionTitle = platform === 'YouTube' ? 'Channel' : 'User';
 <Layout title={video.data.title}>
   <main>
     <div class="tube">
-    <a href="/" class="back-link">&larr; Not a rabbit hole.</a>
+      <a href="/" class="back-link">&larr; Not a rabbit hole.</a>
 
-    <div class:list={[ 'video-wrapper', `${platform}` ]}>
-      <Content />
-    </div>
-
-    <h1 class="title">
-     { narTitle }
-    </h1>
-
-    {
-      videoTitle &&
-      <div class="video-title">
-        <h2>Video Title</h2>
-        <p>{ videoTitle }</p>
+      <div class:list={['video-wrapper', `${platform}`]}>
+        <Content />
       </div>
-    }
 
-    {
-      tweetTextMarkup &&
-      <div>
-        <h2>X Post Text</h2>
-        <div set:html={tweetTextMarkup} />
+      <h1 class="title">
+        {narTitle}
+      </h1>
+
+      {
+        videoTitle && (
+          <div class="video-title">
+            <h2>Video Title</h2>
+            <p>{videoTitle}</p>
+          </div>
+        )
+      }
+
+      {
+        tweetTextMarkup && (
+          <div>
+            <h2>X Post Text</h2>
+            <div set:html={tweetTextMarkup} />
+          </div>
+        )
+      }
+
+      {
+        videoDescriptionMarkup && (
+          <div>
+            <h2>Video Description</h2>
+            <div set:html={videoDescriptionMarkup} />
+          </div>
+        )
+      }
+
+      <div class="attribution">
+        <h2>{attributionTitle}</h2>
+        <p><a href={attributionLink}>{attribution}</a></p>
       </div>
-    }
 
-    { 
-      videoDescriptionMarkup &&
-      <div>
-        <h2>Video Description</h2>
-        <div set:html={videoDescriptionMarkup} />
+      <div class="source-link-container">
+        <SourceLink link={sourceLink} platform={platform} />
       </div>
-    }
 
-    <div class="attribution">
-      <h2>{ attributionTitle }</h2>
-      <p><a href={attributionLink}>{ attribution }</a></p>
-    </div>
-
-    <div class="source-link-container">
-      <SourceLink link={sourceLink} platform={platform} />
-    </div>
-
-    <div class="tags-container">
-      <Tags tags={videoTags} />
-    </div>
-
+      <div class="tags-container">
+        <Tags tags={videoTags} />
+      </div>
     </div>
   </main>
 </Layout>
