--- a/src/pages/videos/tags/[tag].astro
+++ b/src/pages/videos/tags/[tag].astro
@@ -6,14 +6,18 @@ import Card from '../../../components/Card.astro';
 export async function getStaticPaths() {
   const allVideos = await getCollection('videos');
 
-  const uniqueTags = [...new Set(allVideos.map((video) => video.data['video-tags']).flat())];
+  const uniqueTags = [
+    ...new Set(allVideos.map((video) => video.data['video-tags']).flat())
+  ];
 
   return uniqueTags.map((tag) => {
-    const filteredVideos = allVideos.filter((video) => video.data['video-tags'].includes(tag));
+    const filteredVideos = allVideos.filter((video) =>
+      video.data['video-tags'].includes(tag)
+    );
 
     return {
       params: { tag },
-      props: { videos: filteredVideos },
+      props: { videos: filteredVideos }
     };
   });
 }
@@ -24,15 +28,11 @@ const { videos } = Astro.props;
 
 <Layout title={tag}>
   <main class="main-container">
-
-
-     <div class="tube">
-   <a href="/" class="back-link">&larr; Not a rabbit hole.</a>
-    <h1>#{ tag }</h1>
-		  {
-			  videos.map((video) => <Card video={video} />)
-		  }
-     </div>
+    <div class="tube">
+      <a href="/" class="back-link">&larr; Not a rabbit hole.</a>
+      <h1>#{tag}</h1>
+      {videos.map((video) => <Card video={video} />)}
+    </div>
   </main>
 </Layout>
 <style>
@@ -48,5 +48,4 @@ const { videos } = Astro.props;
     margin-bottom: 2rem;
     text-align: left;
   }
-
 </style>
