--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -90,7 +90,7 @@ const { title } = Astro.props;
   }
 
   .tube {
-    width: 95vw;
+    width: 100%;
     margin: 0 auto;
     max-width: 560px;
   }
