--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -18,7 +18,7 @@ const { Content } = await video.render();
     <Content />
   </div>
   <div class="meta">
-    <div class="title">
+    <div class="title fraunces-title">
       {video.data.title}
     </div>
     <div class="link-block">
@@ -40,15 +40,15 @@ const { Content } = await video.render();
   }
 
   .meta {
-    padding-bottom: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-bottom: 1.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .title {
     text-align: left;
-    margin-bottom: 1.5rem;
-    font-weight: bold;
+    margin-bottom: 2rem;
+    font-size: 1.7rem;
   }
 
   .link-block {
