--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -9,7 +9,7 @@ const { tags } = Astro.props;
 <ul class="tags">
   {
     tags.map((tag) => (
-      <li class="tag">
+      <li class="tag fraunces-tag">
         <a href={`/videos/tags/${tag}`}>#{tag}</a>
       </li>
     ))
