--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,24 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
+  @font-face {
+    font-family: 'Fraunces';
+    src: url('/fonts/Fraunces-Italic-VariableFont_SOFT,WONK,opsz,wght.ttf')
+      format('truetype-variations');
+    font-weight: 100 900;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Fraunces';
+    src: url('/fonts/Fraunces-VariableFont_SOFT,WONK,opsz,wght.ttf')
+      format('truetype-variations');
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+  }
+
   :root {
     --green: #4ecdc4;
     --yellow: #ffd93c;
@@ -29,11 +47,74 @@ const { title } = Astro.props;
     --x: #000000;
     --youtube: #ff6b6b;
   }
+
+  .fraunces-i {
+    font-family: 'Fraunces', system-ui;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: italic;
+    font-variation-settings:
+      'SOFT' 50,
+      'WONK' 0;
+  }
+
+  .fraunces-tag-header {
+    font-family: 'Fraunces', system-ui;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+      'SOFT' 0,
+      'WONK' 1;
+  }
+
+  .fraunces-tag {
+    font-family: 'Fraunces', system-ui;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+      'SOFT' 0,
+      'WONK' 0;
+  }
+
+  .fraunces-title {
+    font-family: 'Fraunces', system-ui;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    font-variation-settings:
+      'SOFT' 0,
+      'WONK' 1;
+  }
+
+  .fraunces-section-header {
+    font-family: 'Fraunces', system-ui;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+      'SOFT' 0,
+      'WONK' 1;
+    font-size: 3rem;
+  }
+
+  .fraunces-button {
+    font-family: 'Fraunces', system-ui;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      'SOFT' 100,
+      'WONK' 0;
+  }
+
   * {
     box-sizing: border-box;
   }
+
   html {
-    font-family: system-ui, sans-serif;
+    font-family: 'Fraunces', system-ui, sans-serif;
     background: var(--black);
   }
 
@@ -41,6 +122,18 @@ const { title } = Astro.props;
     color: white;
     margin: 0;
   }
+
+  p {
+    font-family: 'Fraunces', system-ui;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-variation-settings:
+      'SOFT' 0,
+      'WONK' 0;
+    font-size: 1.1rem;
+  }
+
 
   code {
     font-family:
