--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const videos = await getCollection('videos');
 
 <Layout title="Not a rabbit hole.">
   <main class="main-container">
-    <h1>This is not a rabbit hole.</h1>
+    <h1 class="fraunces-i">This is not a rabbit hole.</h1>
     <div class="tube">
       {videos.map((video) => <Card video={video} />)}
     </div>
@@ -18,6 +18,6 @@ const videos = await getCollection('videos');
   h1 {
     margin-top: 2rem;
     margin-bottom: 2rem;
-    font-size: 4rem;
+    font-size: 7rem;
   }
 </style>
