Add content and make small spacing adjustments for mobile

--- a/src/pages/videos/[...slug].astro
+++ b/src/pages/videos/[...slug].astro
@@ -117,4 +117,9 @@ const attributionTitle = platform === 'YouTube' ? 'Channel' : 'User';
   h2 {
     color: var(--green);
   }
+
+  .tube {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
 </style>
