--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,12 @@ const videos = await getCollection('videos');
   h1 {
     margin-top: 2rem;
     margin-bottom: 2rem;
-    font-size: 7rem;
+    font-size: 4rem;
+  }
+
+  @media (min-width: 768px) {
+    h1 {
+      font-size: 7rem;
+    }
   }
 </style>
