Add more whitespace

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -33,14 +33,15 @@ const { Content } = await video.render();
 </div>
 <style>
   .card {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
     background-color: var(--less-black);
     border-bottom-right-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
   }
 
   .meta {
-    padding-bottom: 1.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1.75rem;
     padding-left: 1rem;
     padding-right: 1rem;
   }
@@ -56,6 +57,6 @@ const { Content } = await video.render();
     flex-flow: row wrap;
     justify-content: flex-end;
     text-align: right;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.75rem;
   }
 </style>
