--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,13 @@ import Card from '../components/Card.astro';
 const videoCollection = await getCollection('videos');
 
 const videos = videoCollection.sort(function (a, b) {
-  if (a.id > b.id) {
+  const aId = parseInt(a.id);
+  const bId = parseInt(b.id);
+
+  if (aId > bId) {
     return -1;
   }
-  if (a.id < b.id) {
+  if (aId < bId) {
     return 1;
   }
   return 0;
