Update color scheme

--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -31,7 +31,7 @@ const { tags } = Astro.props;
   }
 
   .tag a {
-    background-color: var(--yellow);
+    background-color: var(--orange);
     color: var(--black);
     border-radius: 0.25rem;
     padding: 0.25rem 0.25rem;
