--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,10 +41,10 @@ const { title } = Astro.props;
   }
 
   :root {
-    --green: #4ecdc4;
-    --yellow: #ffd93c;
-    --black: #1f2321;
-    --less-black: #343b37;
+    --green: #4f7942;
+    --orange: rgb(244, 168, 76);
+    --black: #0e150c;
+    --less-black: #20251f;
     --x: #000000;
     --youtube: #ff6b6b;
   }
