Limit inline image height

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -212,4 +212,8 @@ const { title } = Astro.props;
   footer a:active {
     color: var(--orange);
   }
+
+  main.video-page p img {
+    max-height: 1.1rem;
+  }
 </style>
