--- a/src/pages/videos/[...slug].astro
+++ b/src/pages/videos/[...slug].astro
@@ -28,7 +28,7 @@ const attributionTitle = platform === 'YouTube' ? 'Channel' : 'User';
 ---
 
 <Layout title={video.data.title}>
-  <main>
+  <main class="video-page">
     <div class="tube">
       <a href="/" class="back-link fraunces-i">&larr; Not a rabbit hole.</a>
 
